@@ -461,11 +461,6 @@ If you need to find all the leaf entries, please use
 \fB(hasSubordinates=FALSE)\fP
 instead.
 .LP
-\fBAttribute\fP and \fBObjectClass\fP inheritance is honored neither
-in filters nor in search results.
-So you may search for \fB(givenName=Mitya)\fP in the examples, 
-but not for \fB(name=Mitya)\fP.
-.LP
 .SH EXAMPLES
 There are example SQL modules in the slapd/back-sql/rdbms_depend/
 directory in the OpenLDAP source tree.
